[package]
name = "td4-emu"
version = "0.1.0"
authors = ["katakanan"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-derive = "0.3.3"
num-traits = "0.2.14"

[lib]
name = "td4_emu"
path = "src/lib.rs"

[[bin]]
name = "td4-bin"
path = "src/main.rs"